Migrate to sdl 2.5.x. Currently with ReflectionExceptions on maven verify.